# openxlsx

./: .gitignore  CMakeLists.txt  README
docs/: architecture-analysis.md  batch-rename-usage.md  index.md
docs/bugfix/: 2026-06-24-Bugfix-BatchRenameQuote-v1.0.md  2026-06-24-Bugfix-ConfigCrlfParsing-v1.0.md  2026-06-24-Bugfix-ConfigEncodingUtf8-v1.0.md
docs/design/: 2026-06-23-Feature-OperationLog-v1.0.md  2026-06-24-Refactor-ClipboardFlow-v1.0.md
docs/spec/: 2026-06-23-Spec-BatchRename-v1.0.md
src/: config.ini  excel_search_service.cpp  excel_search_service_1.cpp  excel_search_service_2.cpp  excel_search_service_3.cpp  illegal_chars.txt  isValidIPv4orDomainName.cpp  listern_clipboard_1.cpp  rungetfilenamefrompath.py  search_excel_all_sheets.cpp  search_excel_all_sheets_1.cpp  search_excel_all_sheets_2.cpp  search_excel_all_sheets_3.cpp  search_excel_all_sheets_4.cpp  search_excel_all_sheets_gui_1.cpp  search_excel_all_sheets_gui_2.cpp  search_excel_all_sheets_gui_3.cpp
